fix(be): CORS·쿠키 cross-site 보안 수정 + S3·배포 스크립트 포팅
origin/main(쿠키 기반 인증)과 로컬 main(JWT 헤더 인증)의 이력이 완전히 갈라져 있던 문제를
origin/main을 새 기준선으로 삼아 정리한다. 회원가입 시 발생한 CORS 오류
(Access-Control-Allow-Credentials 누락)의 직접 원인과, 이를 고쳐도 뒤따라올 쿠키
cross-site 전송 문제를 함께 해결한다.

- CorsConfig: allowedOrigins 하드코딩(localhost:3000)을 app.cors.allowed-origins
  환경변수 방식으로 전환(로컬 main의 기존 패턴 재사용)
- AccessTokenCookieWriter: secure/sameSite를 환경변수로 분리(app.cookie.secure,
  app.cookie.same-site). 로컬 기본값은 비보안/Lax, 운영은 application-prod.properties가
  true/None으로 덮어쓴다 — Amplify↔CloudFront cross-site 쿠키 전송에 필수
- application-prod.properties 신규 작성(origin 설정 키 기준): DB/ddl-auto=validate,
  server.forward-headers-strategy=framework(CloudFront 뒤 OAuth2 리다이렉트 baseUrl 보정),
  운영 쿠키 보안 속성, Swagger 비활성화
- S3Config/S3FileStorageService 신규 추가: file.storage.type=s3일 때 활성화되는
  FileStorageService 구현체. FileController가 이미 전제하는 presigned URL 리다이렉트
  계약(getRedirectUrl)을 S3Presigner로 구현
- deploy/ 디렉터리 포팅(install.sh, redeploy.sh, systemd, iam) — 헬스체크 경로를
  origin의 실제 엔드포인트(/api/health)로 수정
- todolist.env.example을 origin 설정 키 기준으로 재작성(APP_FRONTEND_URL →
  OAUTH2_SUCCESS_REDIRECT_URI/OAUTH2_FAILURE_REDIRECT_URI, FILE_STORAGE_TYPE 추가)
- .gitignore: *.env(실제 비밀값), application-prod.properties, IDE/업로드 디렉터리 제외 규칙 추가

관리자 API(Phase 11)·비밀번호 재설정(Phase 9)·첨부파일 목록 UI(Phase 10)는 origin에
대응 기능이 없어 별도 작업으로 남겨둔다.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DJWsrxWr8EMprwtC2ptEfd